--- a/css/index.scss
+++ b/css/index.scss
@@ -5,5 +5,6 @@
 @import "./partials/_nav";
 @import "./partials/_aboutme";
 @import "./partials/_port";
+@import "./partials/_myskills";
 @import './partials/_contact';
 
