--- a/css/index.css
+++ b/css/index.css
@@ -176,10 +176,42 @@ a:hover {
 
 .port__wave {
   display: flex;
+  flex-wrap: wrap;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 125px;
+}
+
+.skills__container {
+  background-color: #f3f4f5;
+  padding-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 3rem;
+}
+.skills__container h2 {
+  font-family: "Poppins", sans-serif;
+  color: black;
+  font-size: 2.3rem;
+}
+
+.skills__info {
+  padding-bottom: 10rem;
+}
+
+.skills__info i {
+  color: #3A9ACA;
+  font-size: 4.2rem;
+  margin: 1rem;
+  text-shadow: 2px 5px 20px rgba(144, 144, 144, 0.3);
+}
+
+.skills__info I:hover {
+  transform: scale(125%);
 }
 
 .contact__container {
