--- a/css/index.css
+++ b/css/index.css
@@ -77,6 +77,7 @@ nav p {
 nav ul {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   list-style: none;
   gap: 2rem;
 }
@@ -189,6 +190,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   align-content: center;
   gap: 3rem;
@@ -219,6 +221,7 @@ a:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
   padding: 5rem;
   gap: 5rem;
 }
