--- a/css/partials/__contact.scss
+++ b/css/partials/__contact.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     padding: 5rem;
     gap: 5rem;
 }
