--- a/css/partials/__myskills.scss
+++ b/css/partials/__myskills.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     align-content: center;
     gap: 3rem;
