--- a/css/partials/__aboutme.scss
+++ b/css/partials/__aboutme.scss
@@ -20,8 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-right: 15rem;
-    margin-left: 10rem;
+    margin: 10rem;
     
 }
 .about__info h2{
