--- a/css/partials/__media.scss
+++ b/css/partials/__media.scss
@@ -1,2 +1,140 @@
-@media screen and (min-width: 480px) {
+@media only screen and (max-width: 768px) {
+    nav {
+    height: auto;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    }
+    .nav__img {
+    width: 55%;
+    margin: 1rem 0;
+    }
+    nav h1 {
+    font-size: 3rem;
+    }
+    nav p {
+    font-size: 1rem;
+    }
+    nav ul {
+    flex-direction: column;
+    margin-top: 1rem;
+    gap: 1rem;
+    }
+    a {
+    font-size: 2rem;
+    }
+    .nav__wave{
+      position: relative;
+      top: 3.5rem;
+      bottom: 0rem;
+      left: 0;
+      width: 100%;
+      height: 50px;
+  }
+  .about__container{
+  flex-direction: column;
+  padding: 10rem 0;
+  height: auto;
+  }
+  .about__svg{
+  width: 50%;
+  margin: 0;
+  }
+  .about__info{
+  margin: 3rem 0;
+  align-items: center;
+  text-align: center;
+  }
+  .about__info h2{
+  font-size: 2rem;
+  margin: 1.5rem 0;
+  }
+  .about__info p{
+  font-size: 1.2rem;
+  margin: 1.5rem 0;
+  }
+  .skills__container{
+    background-color:#f3f4f5;
+    padding-top: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
+    gap: 3rem;
+
+    h2{
+        font-family: "Poppins",sans-serif;
+        color: black;
+        font-size: 2.3rem;
+    }
+}
+.skills__info{
+    padding-bottom: 10rem;
+}
+.skills__info i{
+    color:#3A9ACA ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 4.2rem;
+    margin: 1rem;
+    text-shadow: 2px 5px 20px rgba(144, 144, 144, 0.3);
+    transition: .5s;
+    padding: 1rem;
+}
+.skills__info i:hover{
+    transform: scale(100%);
+    color: white;
+    background-color: #3A9ACA ;
+    border-radius: .5rem;
+    padding: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+  }
+
+  
+  @media only screen and (min-width: 768px) and (max-width: 1500px) {
+  .about__container{
+  padding: 15rem 0;
+  }
+  .about__svg{
+  width: 50%;
+  margin: 0;
+  }
+  .about__info{
+  margin: 0;
+  }
+  .about__info h2{
+  font-size: 2rem;
+  margin: 1.5rem 0;
+  }
+  .about__info p{
+  font-size: 1.2rem;
+  margin: 1.5rem 0;
+  }
+  }
+  
+  @media only screen and (min-width: 1500px) {
+  .about__container{
+  height: 50vh;
+  padding: 27rem 0;
+  }
+  .about__svg{
+  width: 70%;
+  margin-left: 15rem;
+  margin-right: 0;
+  }
+  .about__info{
+  margin-right: 15rem;
+  margin-left: 10rem;
+  }
+  .about__info h2{
+  font-size: 2.3rem;
+  margin: 1rem;
+  }
+  .about__info p{
+  font-size: 1.5rem;
+  margin: 1rem 0;
+  }
   }
