--- a/css/partials/__myskills.scss
+++ b/css/partials/__myskills.scss
@@ -23,7 +23,23 @@
     font-size: 4.2rem;
     margin: 1rem;
     text-shadow: 2px 5px 20px rgba(144, 144, 144, 0.3);
+    transition: .5s;
+    padding: 1rem;
+    border-radius:.5rem ;
 }
-.skills__info I:hover{
-    transform: scale(125%);
+.skills__info i:hover{
+    transform: scale(100%);
+    color: white;
+    background-color: #3A9ACA ;
+    border-radius: .5rem;
+    padding: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+.port__wave{
+    display: flex;
+    flex-wrap: wrap;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 125px;
 }
