--- a/css/partials/__port.scss
+++ b/css/partials/__port.scss
@@ -15,6 +15,7 @@
 }
 .portafolio__flex a{
     opacity: 0.8;
+    transition: 1s;
 }
 .portafolio__flex a:hover{
     transform: scale(105%);
@@ -23,12 +24,4 @@
 .portafolio__flex img{
     max-width: 30rem;
     border-radius: 1rem
-}
-.port__wave{
-    display: flex;
-    flex-wrap: wrap;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 125px;
 }
