configure tittle responsive

--- a/css/partials/__nav.scss
+++ b/css/partials/__nav.scss
@@ -22,7 +22,9 @@ nav h1{
     color: white;
 }
 nav p{
-    color: white;
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
+    color: rgba(255, 255, 255, 0.734);
     font-family: 'Poppins', sans-serif;
 }
 nav ul{
