--- a/css/index.css
+++ b/css/index.css
@@ -70,7 +70,9 @@ nav h1 {
 }
 
 nav p {
-  color: white;
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+  color: rgba(255, 255, 255, 0.734);
   font-family: "Poppins", sans-serif;
 }
 
@@ -333,10 +335,11 @@ nav ul {
     margin: 1rem 0;
   }
   nav h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   nav p {
-    font-size: 1rem;
+    font-size: 1.3rem;
+    color: rgba(255, 255, 255, 0.734);
   }
   nav ul {
     flex-direction: column;
