--- a/css/partials/__media.scss
+++ b/css/partials/__media.scss
@@ -7,12 +7,14 @@
     .nav__img {
     width: 55%;
     margin: 1rem 0;
+
     }
     nav h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     }
     nav p {
-    font-size: 1rem;
+    font-size: 1.3rem;
+    color: rgba(255, 255, 255, 0.734);
     }
     nav ul {
     flex-direction: column;
