--- a/css/partials/__media.scss
+++ b/css/partials/__media.scss
@@ -10,7 +10,7 @@
 
     }
     nav h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     }
     nav p {
     font-size: 1.3rem;
@@ -54,6 +54,10 @@
   font-size: 1.2rem;
   margin: 1.5rem 0;
   }
+  .portafolio__flex img{
+    max-width: 20rem;
+    border-radius: 1rem
+}
   .skills__container{
     background-color:#f3f4f5;
     padding-top: 10rem;
